//
//  UITestAccessibilityIdentifier.swift
//  Application
//
//  Created by Stanislav Matvichuck on 05.06.2023.
//

import Foundation

enum UITestAccessibilityIdentifier: String {
    case eventDetailsScroll,
         textFieldGoal,
         buttonGoalDone,
         buttonPdfCreate,
         buttonPdfShare,
         eventValue,
         eventTitle,
         eventSwiper,
         buttonCreteEvent,
         removeEventArea,
         hint,
         orderingVariant,
         weekDay,
         weekPageMonth,
         dayDetailsHappening,
         dayDetailsAddHappening,
         dayDetailsHappeningsList,
         dayDetailsBackground,
         summaryValue,
         goalsList,
         goal,
         buttonCreateGoal,
         buttonIncreaseGoalValue
}
