...

let dayDetailsDateFormat = "d MMMM"
let weekPageDateFormat = "LLLL"

let collectionCellReuseIdentifierHint = "HintCell"
let collectionCellReuseIdentifierEvent = "EventCell"
let collectionCellReuseIdentifierCreate = "CreateEventCell"
let collectionCellReuseIdentifierGoalCreate = "CreateGoalViewModel"
let collectionCellReuseIdentifierWeekPage = "WeekPageView"
let collectionCellReuseIdentifierDayHappening = "DayHappeningCell"

