...
import UIKit

// TODO: localization
final class GoalInputAccessoryView: UIStackView {
    static let buttonsRadius: CGFloat = WeekCellView.cornerRadius

    let done = make("Done")
    let minus = make("-1")
    let plus = make("+1")

    init() {
        super.init(frame: CGRect(
            origin: .zero,
...
