...
//  Created by Stanislav Matvichuck on 04.01.2023.
//

import UIKit

final class FooterCell: UITableViewCell {
    static var reuseIdentifier = "FooterCell"

    let button = UIButton(al: true)

    var viewModel: CreateEventCellViewModel? {
        didSet {
            guard let viewModel else { return }
...
